--- a/appendix.tex
+++ b/appendix.tex
@@ -1,8 +1,8 @@
 \appendix
 \section{Building the mass matrix}
-Let us take for example the mass matrix $M_{PWLD}$ and the mass matrix on a
+Let us define the mass matrix $M_{PWLD}$ and the mass matrix on a
 ``side'' sub-cell $M$. We assume that the third basis function is associated
-to the middle point of the PWLD cell. The first (respectively second) basis function
+to the middle point of the cell. The first (respectively second) basis function
 on the cell correspond to the first (respectively second) basis function of
 the ``side'' sub-cell.
 
