--- a/biblio.bib
+++ b/biblio.bib
@@ -493,7 +493,7 @@
   school = {Texas A\&M University},
   year = {2008}
 }
-@Article{pwld_diffusion,
+@Article{pwl_diffusion,
   title = {{A piecewise linear finite element discretization of the diffusion
     equation for arbitrary polyhedral grids}},
   author = {Theresa S. Bailey and Marvin L. Adams and Brian Yang and Michael
@@ -530,7 +530,7 @@
   pages = {1411-1420},
   year = {1995},
 }
-@TechReport{ml-guide,
+@TechReport{ml_guide,
   author = {M.W. Gee and C.M. Siefert and J.J. Hu and R.S. Tuminaro and M.G.
     Sala},
   title = {{ML 5.0 Smoothed Aggregation User's Guide}},
@@ -741,14 +741,6 @@
   note = {{Course Notes of an Algebraic Multigrid Course at the University of
     Heidelberg in the Winter Semester 1998/1999}}
 }
-@TechReport{ml_guide,
-  title = {{ML 5.0 Smoothed Aggregation User's Guide}},
-  author = {M.W. Gee and C.M. Siefert and J.J. Hu and R.S. Tuminaro and M.G.
-    Sala},
-  institution = {Sandia National Laboratories},
-  year = {2006},
-  number = {SAND2006-2649}
-}  
 @Article{mis,
   title = {{Parallel Smoothed Aggregation Multigrid: Aggregation Strategies on
     Massively Parallel Machines}},
@@ -878,4 +870,37 @@
   journal = {Transactions of the American Nuclear Society},
   volume = {91},
   year = {2004}
+}
+@Article{amr_rad,
+  title = {{An Adaptive Mesh Refinement Algorithm for the Radiative Transport
+    Equation}},
+  author = {J. Patrick Jessee and Woodrow A. Fiveland and Louis H. Howell and
+    Phillips Colella and Richard and B. Pember},
+  journal = {Journal of Computational Physics},
+  year = {1998},
+  month = {January},
+  volume = {139},
+  number = {2},
+  pages = {380-398}
+}
+@Article{amr_block,
+  title = {{A Block Adaptive Mesh Refinement Algorithm for the Neutral
+    Particle Transport Equation}},
+  author = {Randal S. Baker},
+  journal = {Nuclear Science and Engineering},
+  year = {2002},
+  month = {May},
+  volume = {141},
+  number = {1},
+  pages = {1-12}
+}
+@Article{amr_unstruc,
+  title = {{Standard and Goal-Oriented Adaptive Mesh Refinement applied to
+    Radiation Transport on 2D Unstructured Triangular Meshes}},
+  author = {Yaqi Wang and Jean C. Ragusa},
+  journal = {Journal of Computational Physics},
+  year = {2010},
+  month = {October},
+  volume = {230},
+  pages = {763-788}
 }
